# mmdm

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamlfmt.yaml  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yaml  sitemap.xml
.github/workflows/: format_and_lint_ci.yml  mkdocs_ci_gh_pages.yml
docs/: index.md
include/PackageName/: temp.hpp
include/mmdm/: main.h  sdl_utils.h
search/: search_index.json
src/: CMakeLists.txt  main.c  sdl_utils.c  template.c
src/example/: CMakeLists.txt  temp_ex.c
test/: CMakeLists.txt  main_test.c  temp_test.c
